<resources>
    <string name="app_name">Tour Assist SL</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="Navigate">Back</string>
    <string name="Access">Log Out</string>
    <string name="logo">Tour Assist Srilanka</string>
    <string name="button1">Manage Tourist-Guide</string>
    <string name="button2">Manage Rooms</string>
    <string name="button3">Manage Vehicles</string>
    <string name="button4">Calculate Total Income</string>
    <string name="button5">Calculate Total Expense</string>
    <string name="button6">Calculate Salary</string>
    <string name="footer1">Tour-Assist App</string>
    <string name="footer2">S.Sanjay (IT19158228)</string>
    <string name="NewRoom">Add New Room</string>
    <string name="ID">RoomID</string>
    <string name="Type">Room Type</string>
    <string name="Des">Description</string>
    <string name="feat">Features</string>
    <string name="checkbox1">Free Wifi</string>
    <string name="checkbox2">Television</string>
    <string name="checkbox3">Air-conditioned</string>
    <string name="checkbox4">Shower</string>
    <string name="checkbox5">Tea-Maker</string>
    <string name="price">Price</string>
    <string name="RoomButton1">Add Room</string>
    <string name="income">Generate Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="customers">Manage Customers</string>
    <string name="ViewRooms">View Rooms</string>
    <string name="search">Search Room</string>
    <string name="EditRooms">Edit Rooms</string>
    <string name="updRoom">Update Room</string>
    <string name="delRoom">Delete Room</string>
    <string name="Title">Tour Assist Srilanka</string>
    <string name="BookRooms">Book Rooms</string>
    <string name="BookHotel">Book Hotel Rooms</string>
    <string name="BookVeh">Book Vehicles</string>
    <string name="BookAll">Take a tour</string>
    <string name="locat">Location</string>
    <string name="EditRooms1">Edit Room Details</string>
    <string name="delHome">Delete Room HomePage</string>
    <string name="List">List of Rooms</string>
    <string name="update">Update Details</string>
    <string name="delete">Delete Details</string>
    <string name="choose">Choose</string>
    <string name="uploadimage">Upload an Image</string>
    <string name="incomedet">Total Income Recieved</string>
    <string name="newImage">Choose a new image</string>
    <string name="addnewimage">Add new Image</string>
    <string name="roomList">List of Available Rooms</string>
    <string name="goBack">Go back to Manage Rooms</string>
    <string name="tourist">Book Tourist Guides</string>
    <string name="tour1">Book Guide</string>
    <string name="Login_Act">Login</string>
    <string name="para">Dont worry! happens to the best of us..</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_077">077*******</string>
</resources>